added code to generate bear-off option